--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -20,6 +20,7 @@
 <!--controllers-->
 <script src="js/controller/SignUpController.js"></script>
 <script src="js/controller/MainController.js"></script>
+<script src="js/controller/SignInController.js"></script>
 <!--services-->
 <script src="js/service/rolesService.js"></script>
 <script src="js/service/userService.js"></script>
