--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,32 +2,56 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anna'nas Manager</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+
+    <link rel="shortcut icon" href="images/icons/favicon.ico">
+    <link rel="apple-touch-icon" href="images/icons/favicon.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="images/icons/favicon-72x72.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="images/icons/favicon-114x114.png">
+    <!--Loading bootstrap css-->
+    <link type="text/css" rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,300,700">
+    <link type="text/css" rel="stylesheet" href="http://fonts.googleapis.com/css?family=Oswald:400,700,300">
+    <link type="text/css" rel="stylesheet" href="css/jquery-ui-1.10.4.custom.min.css">
+    <link type="text/css" rel="stylesheet" href="css/font-awesome.min.css">
+    <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css">
+    <link type="text/css" rel="stylesheet" href="css/animate.css">
+    <link type="text/css" rel="stylesheet" href="css/all.css">
+    <link type="text/css" rel="stylesheet" href="css/main.css">
+    <link type="text/css" rel="stylesheet" href="css/style-responsive.css">
+    <link type="text/css" rel="stylesheet" href="css/zabuto_calendar.min.css">
+    <link type="text/css" rel="stylesheet" href="css/pace.css">
+    <link type="text/css" rel="stylesheet" href="css/jquery.news-ticker.css">
 </head>
 <body ng-app="app" ng-cloak>
-    <div class="container">
+    <div>
         <div ui-view></div>
+        <div ui-view="navBar"></div>
+        <div ui-view="sideMenu"></div>
     </div>
 
 <script src="js/jquery-1.12.4.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
+<script src="js/bootstrap/bootstrap.min.js"></script>
+
+    <!--angular-->
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.2/angular.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.2/angular-cookies.js"></script>
 <script src="https://rawgit.com/dwmkerr/angular-modal-service/master/dst/angular-modal-service.js"></script>
 <script src="js/app.js"></script>
 <!--controllers-->
 <script src="js/controller/SignUpController.js"></script>
 <script src="js/controller/MainController.js"></script>
 <script src="js/controller/SignInController.js"></script>
+<script src="js/controller/NavBarController.js"></script>
 <!--services-->
 <script src="js/service/rolesService.js"></script>
 <script src="js/service/userService.js"></script>
 <script src="js/service/isEmailAvailable.js"></script>
 <!--directives-->
-<script src="js/directives/signUpForm.js"></script>
-<script src="js/directives/signInForm.js"></script>
 <script src="js/directives/compareTo.js"></script>
 <script src="js/directives/uniqueEmail.js"></script>
 
