--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -31,6 +31,7 @@
         <div ui-view></div>
         <div ui-view="navBar"></div>
         <div ui-view="sideMenu"></div>
+        <!--<div ui-view="content"></div>-->
     </div>
 
 <script src="js/jquery-1.12.4.min.js"></script>
