--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -52,6 +52,7 @@
 <script src="js/service/rolesService.js"></script>
 <script src="js/service/userService.js"></script>
 <script src="js/service/isEmailAvailable.js"></script>
+<script src="js/service/templateService.js"></script>
 <!--directives-->
 <script src="js/directives/compareTo.js"></script>
 <script src="js/directives/uniqueEmail.js"></script>
