task entity for todo back + fetchAll front

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -48,11 +48,13 @@
 <script src="js/controller/MainController.js"></script>
 <script src="js/controller/SignInController.js"></script>
 <script src="js/controller/NavBarController.js"></script>
+<script src="js/controller/TodoListController.js"></script>
 <!--services-->
 <script src="js/service/rolesService.js"></script>
 <script src="js/service/userService.js"></script>
 <script src="js/service/isEmailAvailable.js"></script>
 <script src="js/service/templateService.js"></script>
+<script src="js/service/todoListService.js"></script>
 <!--directives-->
 <script src="js/directives/compareTo.js"></script>
 <script src="js/directives/uniqueEmail.js"></script>
