editing todo done + fixed styles sidebar

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -58,6 +58,7 @@
 <script src="js/controller/NavBarController.js"></script>
 <script src="js/controller/TodoListController.js"></script>
 <script src="js/controller/NewTodoController.js"></script>
+<script src="js/controller/EditTodoController.js"></script>
 <!--services-->
 <script src="js/service/rolesService.js"></script>
 <script src="js/service/userService.js"></script>
