inheritance in users + ptojects backend

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -37,7 +37,6 @@
         <div ui-view></div>
         <div ui-view="navBar"></div>
         <div ui-view="sideMenu"></div>
-        <!--<div ui-view="content"></div>-->
     </div>
 
 <script src="js/jquery-1.12.4.min.js"></script>
@@ -59,12 +58,14 @@
 <script src="js/controller/TodoListController.js"></script>
 <script src="js/controller/NewTodoController.js"></script>
 <script src="js/controller/EditTodoController.js"></script>
+<script src="js/controller/ProjectListController.js"></script>
 <!--services-->
 <script src="js/service/rolesService.js"></script>
 <script src="js/service/userService.js"></script>
 <script src="js/service/isEmailAvailable.js"></script>
 <script src="js/service/templateService.js"></script>
 <script src="js/service/todoListService.js"></script>
+<script src="js/service/ProjectService.js"></script>
 <!--directives-->
 <script src="js/directives/compareTo.js"></script>
 <script src="js/directives/uniqueEmail.js"></script>
