project files uploading done

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -73,6 +73,7 @@
 <!--directives-->
 <script src="js/directives/compareTo.js"></script>
 <script src="js/directives/uniqueEmail.js"></script>
+<script src="js/directives/fileModel.js"></script>
 
 <script src="js/moment.js"></script>
 <script src="js/angular-moment.min.js"></script>
