files downloading done

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -77,6 +77,7 @@
 
 <script src="js/moment.js"></script>
 <script src="js/angular-moment.min.js"></script>
+<script src="js/angular-file-saver-master/dist/angular-file-saver.bundle.js"></script>
 <script src="ckeditor_4.6.2_basic/ckeditor/ckeditor.js"></script>
 <script src="ckeditor_4.6.2_basic/ckeditor/angular-ckeditor.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-sanitize/1.6.4/angular-sanitize.min.js"></script>
