--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -63,6 +63,7 @@
 <script src="js/controller/ProjectListController.js"></script>
 <script src="js/controller/NewProjectController.js"></script>
 <script src="js/controller/ProjectInfoController.js"></script>
+<script src="js/controller/EditProjectController.js"></script>
 <!--services-->
 <script src="js/service/rolesService.js"></script>
 <script src="js/service/userService.js"></script>
