tasks for project adding + getting done

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -65,6 +65,8 @@
 <script src="js/controller/ProjectInfoController.js"></script>
 <script src="js/controller/EditProjectController.js"></script>
 <script src="js/controller/DeleteProjectController.js"></script>
+<script src="js/controller/ProjectTasksController.js"></script>
+<script src="js/controller/NewTaskController.js"></script>
 <!--services-->
 <script src="js/service/rolesService.js"></script>
 <script src="js/service/userService.js"></script>
