--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -72,8 +72,8 @@
 <script src="js/service/userService.js"></script>
 <script src="js/service/isEmailAvailable.js"></script>
 <script src="js/service/templateService.js"></script>
-<script src="js/service/todoListService.js"></script>
-<script src="js/service/ProjectService.js"></script>
+<script src="js/service/crudService.js"></script>
+<script src="js/service/fileService.js"></script>
 <!--directives-->
 <script src="js/directives/compareTo.js"></script>
 <script src="js/directives/uniqueEmail.js"></script>
