filters added + tl view for task info

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -67,6 +67,7 @@
 <script src="js/controller/DeleteController.js"></script>
 <script src="js/controller/ProjectTasksController.js"></script>
 <script src="js/controller/NewTaskController.js"></script>
+<script src="js/controller/TaskInfoController.js"></script>
 <!--services-->
 <script src="js/service/rolesService.js"></script>
 <script src="js/service/userService.js"></script>
@@ -78,6 +79,9 @@
 <script src="js/directives/compareTo.js"></script>
 <script src="js/directives/uniqueEmail.js"></script>
 <script src="js/directives/fileModel.js"></script>
+<!--filters-->
+<script src="js/filters/CapitalizeFilter.js"></script>
+<script src="js/filters/UnderscoreFilter.js"></script>
 
 <script src="js/moment.js"></script>
 <script src="js/angular-moment.min.js"></script>
