editing task for project

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -68,6 +68,7 @@
 <script src="js/controller/ProjectTasksController.js"></script>
 <script src="js/controller/NewTaskController.js"></script>
 <script src="js/controller/TaskInfoController.js"></script>
+<script src="js/controller/EditTaskController.js"></script>
 <!--services-->
 <script src="js/service/rolesService.js"></script>
 <script src="js/service/userService.js"></script>
