task status changing and approvment done

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -69,6 +69,7 @@
 <script src="js/controller/NewTaskController.js"></script>
 <script src="js/controller/TaskInfoController.js"></script>
 <script src="js/controller/EditTaskController.js"></script>
+<script src="js/controller/TaskApproveController.js"></script>
 <!--services-->
 <script src="js/service/rolesService.js"></script>
 <script src="js/service/userService.js"></script>
@@ -76,6 +77,7 @@
 <script src="js/service/templateService.js"></script>
 <script src="js/service/crudService.js"></script>
 <script src="js/service/fileService.js"></script>
+<script src="js/service/taskService.js"></script>
 <!--directives-->
 <script src="js/directives/compareTo.js"></script>
 <script src="js/directives/uniqueEmail.js"></script>
