dev list view done

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -70,6 +70,7 @@
 <script src="js/controller/TaskInfoController.js"></script>
 <script src="js/controller/EditTaskController.js"></script>
 <script src="js/controller/TaskApproveController.js"></script>
+<script src="js/controller/DevController.js"></script>
 <!--services-->
 <script src="js/service/rolesService.js"></script>
 <script src="js/service/userService.js"></script>
