--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -72,6 +72,7 @@
 <script src="js/controller/EditTaskController.js"></script>
 <script src="js/controller/TaskApproveController.js"></script>
 <script src="js/controller/DevController.js"></script>
+<script src="js/controller/ChartDevController.js"></script>
 <!--services-->
 <script src="js/service/rolesService.js"></script>
 <script src="js/service/userService.js"></script>
@@ -93,6 +94,8 @@
 <script src="js/angular-file-saver-master/dist/angular-file-saver.bundle.js"></script>
 <script src="ckeditor_4.6.2_basic/ckeditor/ckeditor.js"></script>
 <script src="ckeditor_4.6.2_basic/ckeditor/angular-ckeditor.min.js"></script>
+<script src="js/Chart.js"></script>
+<script src="angular-chart.js-master/dist/angular-chart.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-sanitize/1.6.4/angular-sanitize.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-sanitize/1.6.4/angular-sanitize.min.js.map"></script>
 </body>
