profile editing done

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -74,6 +74,7 @@
 <script src="js/controller/DevController.js"></script>
 <script src="js/controller/ChartController.js"></script>
 <script src="js/controller/ProfileController.js"></script>
+<script src="js/controller/EditUserController.js"></script>
 <!--services-->
 <script src="js/service/rolesService.js"></script>
 <script src="js/service/userService.js"></script>
