calendar added, needs css fix

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -32,6 +32,8 @@
     <link href="telerik/kendo-ui/styles/kendo.bootstrap.mobile.min.css" rel="stylesheet" type="text/css" />
     <link href="telerik/kendo-ui/styles/kendo.dataviz.min.css" rel="stylesheet" />
     <link href="telerik/kendo-ui/styles/kendo.dataviz.bootstrap.min.css" rel="stylesheet" />
+    <!--calendar-->
+    <link href="angular-material-event-calendar/dist/angular-material-event-calendar.min.css" rel="stylesheet" />
 </head>
 <body ng-app="app" ng-cloak>
     <div>
@@ -75,6 +77,7 @@
 <script src="js/controller/ChartController.js"></script>
 <script src="js/controller/ProfileController.js"></script>
 <script src="js/controller/EditUserController.js"></script>
+<script src="js/controller/CalendarController.js"></script>
 <!--services-->
 <script src="js/service/rolesService.js"></script>
 <script src="js/service/userService.js"></script>
@@ -98,6 +101,7 @@
 <script src="ckeditor_4.6.2_basic/ckeditor/angular-ckeditor.min.js"></script>
 <script src="js/Chart.js"></script>
 <script src="angular-chart.js-master/dist/angular-chart.js"></script>
+<script src="angular-material-event-calendar/dist/angular-material-event-calendar.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-sanitize/1.6.4/angular-sanitize.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-sanitize/1.6.4/angular-sanitize.min.js.map"></script>
 </body>
