--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -34,6 +34,12 @@
     <link href="telerik/kendo-ui/styles/kendo.dataviz.bootstrap.min.css" rel="stylesheet" />
     <!--calendar-->
     <link href="angular-material-event-calendar/dist/angular-material-event-calendar.min.css" rel="stylesheet" />
+    <!--<link href="angular-material-event-calendar/src/eventCalendar-theme.scss" rel="stylesheet" />-->
+    <!--<link href="angular-material-event-calendar/src/eventCalendar.scss" rel="stylesheet" />-->
+    <!--<link href="angular-material-event-calendar/src/eventCalendar-colors.scss" rel="stylesheet" />-->
+    <!--<link href="angular-material-event-calendar/public/style.css" rel="stylesheet" />-->
+    <!--<link href="angular-material-event-calendar/public/eventCalendar-colors.css" rel="stylesheet" />-->
+    <!--<link href="angular-material-event-calendar/public/eventCalendar.css" rel="stylesheet" />-->
 </head>
 <body ng-app="app" ng-cloak>
     <div>
