--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -33,13 +33,10 @@
     <link href="telerik/kendo-ui/styles/kendo.dataviz.min.css" rel="stylesheet" />
     <link href="telerik/kendo-ui/styles/kendo.dataviz.bootstrap.min.css" rel="stylesheet" />
     <!--calendar-->
-    <link href="angular-material-event-calendar/dist/angular-material-event-calendar.min.css" rel="stylesheet" />
-    <!--<link href="angular-material-event-calendar/src/eventCalendar-theme.scss" rel="stylesheet" />-->
-    <!--<link href="angular-material-event-calendar/src/eventCalendar.scss" rel="stylesheet" />-->
-    <!--<link href="angular-material-event-calendar/src/eventCalendar-colors.scss" rel="stylesheet" />-->
-    <!--<link href="angular-material-event-calendar/public/style.css" rel="stylesheet" />-->
-    <!--<link href="angular-material-event-calendar/public/eventCalendar-colors.css" rel="stylesheet" />-->
-    <!--<link href="angular-material-event-calendar/public/eventCalendar.css" rel="stylesheet" />-->
+    <!--<link rel="stylesheet" href="ui-calendar-master/demo/calendarDemo.css"/>-->
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.4.0/fullcalendar.min.css"/>
+    <!--<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.4.0/fullcalendar.print.css"/>-->
+
 </head>
 <body ng-app="app" ng-cloak>
     <div>
@@ -107,7 +104,11 @@
 <script src="ckeditor_4.6.2_basic/ckeditor/angular-ckeditor.min.js"></script>
 <script src="js/Chart.js"></script>
 <script src="angular-chart.js-master/dist/angular-chart.js"></script>
-<script src="angular-material-event-calendar/dist/angular-material-event-calendar.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.0/ui-bootstrap-tpls.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.0/ui-bootstrap.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.4.0/fullcalendar.min.js"></script>
+
+<script src="ui-calendar-master/src/calendar.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-sanitize/1.6.4/angular-sanitize.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-sanitize/1.6.4/angular-sanitize.min.js.map"></script>
 </body>
